--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "classnames": "^2.2.6",
     "effector": "^21.5.0",
     "effector-react": "^21.0.6",
+    "final-form": "^4.20.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "react-onclickoutside": "^6.9.0",
     "react-router-dom": "^5.2.0"
   }
