--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve",
     "build": "webpack --config webpack.config.js"
   },
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/classnames": "^2.2.10",
+    "@types/jest": "^26.0.16",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-onclickoutside": "^6.7.3",
@@ -25,6 +26,7 @@
     "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "react-svg-loader": "^3.0.3",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
