--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --config jest.config.ts",
     "start": "webpack serve",
     "build": "webpack --config webpack.config.js"
   },
@@ -30,6 +30,7 @@
     "react-svg-loader": "^3.0.3",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
+    "ts-node": "^9.1.0",
     "typescript": "^4.0.3",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
